--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -38,6 +38,10 @@
   }
 }
 
+.yolo-footer {
+  text-align: right;
+}
+
 // Left align content, right margin auto, left margin 0
 .left {
   margin-right: auto;
