--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -15,7 +15,7 @@ $dark-primary-color: #000928;
 $dark-secondary-color: #fb1d9e;
 $dark-accent-color: #00b0ff;
 $dark-link-color: #65e9fc;
-$dark-code-background-color: #01081f;
+$dark-code-background-color: #000110;
 $dark-code-color: #b388ff;
 $dark-sidebar-color: #000110;
 
