Open, save-as script manually tested with all src/samples

--- a/src/samples/yolo-dallas/_sass/yolo/themes/_corbs.scss
+++ b/src/samples/yolo-dallas/_sass/yolo/themes/_corbs.scss
@@ -20,6 +20,6 @@ $dark-code-color: #b388ff;
 $dark-sidebar-color: #000110;
 
 // fonts
-$family-primary: "JetBrains Mono", monospace;
-$family-secondary: "Poppins", sans-serif;
-$family-monospace: "Inconsolata", monospace;
+$family-primary: "Inconsolata", monospace;
+$family-secondary: "Open Sans", sans-serif;
+$family-monospace: "Red Hat Mono", monospace;
