--- a/src/samples/yolo-skeletor/_sass/yolo/themes/_skeletor.scss
+++ b/src/samples/yolo-skeletor/_sass/yolo/themes/_skeletor.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// corbs theme
+// skeletor theme
 // ----------------------------------------------------------------------------
 // light mode colors
 $light-primary-color: #dbddf8;
@@ -17,7 +17,7 @@ $dark-accent-color: #8f67fe;
 $dark-link-color: #65e9fc;
 $dark-code-background-color: #100020;
 $dark-code-color: #b4a9e9;
-$dark-sidebar-color: #05000c;
+$dark-sidebar-color: #1e0c4a;
 
 // fonts
 $family-primary: "Inconsolata", monospace;
