--- a/src/samples/yolo-main/_sass/yolo/themes/_corbs.scss
+++ b/src/samples/yolo-main/_sass/yolo/themes/_corbs.scss
@@ -4,8 +4,8 @@
 // light mode colors
 $light-primary-color: #edf5fb;
 $light-secondary-color: #1a237e;
-$light-accent-color: #0091ea;
-$light-link-color: #ed1292;
+$light-accent-color: #d10277;
+$light-link-color: #0091ea;
 $light-code-background-color: #f8faff;
 $light-code-color: #6843c8;
 $light-sidebar-color: #e1f5fe;
