--- a/_includes/components/header.html
+++ b/_includes/components/header.html
@@ -5,8 +5,8 @@
     </a>
     {% endif %}
     <div id="theme-dot" class="theme-dot">&#9681;</div>
-    <h1 class="tag no-toc"><a href="./">{{ site.name }}</a></h1>
-    <h4 class="description no-toc">{{ site.description }}</h4>
+    <h1 class="tag no-toc"><a href="./">{{ site.data.settings.name }}</a></h1>
+    <h4 class="description no-toc">{{ site.data.settings.description }}</h4>
     <p>
         <span>
           {% for tag in page.tags %}
