Refactored yolo settings from _config.yml to _data/settings.yml

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -1,4 +1,4 @@
 <div class="yolo-footer">
     <hr/>
-    <p>{{ site.data.settings.name }} {{ site.version }} built {{ "now" | date: "%Y-%m-%d %H:%M" }}</p>
+    <p>{{ site.data.settings.name }} {{ site.data.settings.version }} built {{ "now" | date: "%Y-%m-%d %H:%M" }}</p>
 </div>
