--- a/_includes/components/header.html
+++ b/_includes/components/header.html
@@ -1,7 +1,7 @@
 <div class="yolo-header">
-    {% if site.header.logo %}
+    {% if site.data.settings.header.logo %}
     <a href="./">
-        <img class="logo" alt="site-logo" src="{{ site.header.logo }}" title="Site Logo"/>
+        <img class="logo" alt="site-logo" src="{{ site.data.settings.header.logo }}" title="Site Logo"/>
     </a>
     {% endif %}
     <div id="theme-dot" class="theme-dot">&#9681;</div>
