--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,10 @@
     <!-- Site metadata -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="{{ site.description }}">
+    <meta name="description" content="{{ site.data.settings.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site title -->
-    <title>{{ site.title }}</title>
+    <title>{{ site.data.settings.title }}</title>
     <!-- Fonts -->
     {% if site.data.fonts.size > 0 %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
