--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,13 @@
 <div id="sidebar" class="sidebar">
 <!--    <div id="sidebar-close" class="close">&times;</div>-->
     <div class="inner">
-        {% if site.sidebar.logo %}
+        {% if site.data.settings.sidebar.logo %}
         <div class="sidebar-logo">
             <a href="./">
-                <img class="is-circle-128" alt="sidebar-logo" src="{{ site.sidebar.logo }}" title="Sidebar Logo"/>
+                <img class="is-circle-128"
+                     alt="sidebar-logo"
+                     src="{{ site.data.settings.sidebar.logo }}"
+                     title="Sidebar Logo"/>
             </a>
         </div>
         {% endif %}
