--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 <html lang="en">
 {% include head.html %}
 <body id="yolo-site">
-  {% if site.sidebar %}
+  {% if site.data.settings.sidebar %}
   {% include sidebar.html %}
   {% endif %}
-  <div id="yolo-container" class="container {{ site.align }}">
+  <div id="yolo-container" class="container {{ site.data.settings.align | default: 'left' }}">
     <header>
       {% include components/header.html %}
     </header>
