--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 @charset "utf-8";
 
 @import "yolo/variables";
-@import "yolo/themes/{{ site.style | default: 'corbs' }}";
+@import "yolo/themes/{{ site.data.settings.style | default: 'corbs' }}";
 @import "yolo/normalize";
 @import "yolo/base";
 @import "yolo/responsiveness";
@@ -18,6 +18,6 @@
 @import "yolo/dark";
 @import "yolo/light";
 
-{% if site.sidebar %}
+{% if site.data.settings.sidebar %}
 @import "yolo/sidebar";
 {% endif %}
