MVP theme refactor, needs testing and code cleanup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,26 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family={% for font in site.data.fonts %}{{ font.name | replace: ' ', '+' }}{% if font.weights %}:{% endif %}{{ font.weights | remove: ' ' }}{% if forloop.last != true %}|{% endif %}{% endfor %}">
+    <!-- Ionicons Icons -->
+    <link rel="preload" href="https://unpkg.com/ionicons@4.6.3/dist/css/ionicons.min.css" as="style">
+    <link href="https://unpkg.com/ionicons@4.6.3/dist/css/ionicons.min.css" rel="stylesheet">
     {% endif %}
-    <script>
-      {% if site.data.settings.color_scheme == "auto" %}
-      if (localStorage.getItem("theme") === "dark") {
-        document.documentElement.setAttribute("dark", "");
-        document.documentElement.classList.add('dark-mode');
-      }
-      {% elsif site.data.settings.color_scheme == "light" %}
-      document.documentElement.setAttribute("light", "");
-      document.documentElement.classList.add('light-mode');
-      {% elsif site.data.settings.color_scheme == "dark" %}
-      document.documentElement.setAttribute("dark", "");
-      document.documentElement.classList.add('dark-mode');
-      {% else %}
-      if (localStorage.getItem("theme") === "dark") {
-        document.documentElement.setAttribute("dark", "");
-        document.documentElement.classList.add('dark-mode');
-      }
-      {% endif %}
-    </script>
+    <script src="assets/js/theme.js"></script>
     <!-- Main site stylesheet, generated via sass -->
     <link rel="stylesheet" href="css/main.css">
 </head>
