--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="yolo-themed">
 {% include head.html %}
 <body id="yolo-site">
   {% if site.data.settings.sidebar %}
