--- a/_sass/yolo/_theme.scss
+++ b/_sass/yolo/_theme.scss
@@ -1,7 +1,41 @@
 // ----------------------------------------------------------------------------
-// Theme stylesheet
+// Theme stylesheet for all elements that get special attention
 // ----------------------------------------------------------------------------
-.theme {
+// Syntax Highlighting on light
+// ----------------------------------------------------------------------------
+:root {
+  --syntax01: #8f8f8f;
+  --syntax02: #011842;
+  --syntax03: #393939;
+  --syntax04: #eb6302;
+  --syntax05: #c500e3;
+  --syntax06: #01c72b;
+  --syntax07: #019e9e;
+  --syntax08: #1b3df8;
+  --syntax09: #5923ca;
+  --syntax10: #db0c4d;
+}
+// ----------------------------------------------------------------------------
+// Syntax Highlighting on dark
+// ----------------------------------------------------------------------------
+:root[dark] {
+  --syntax01: #a0a0a0;
+  --syntax02: #e4e8eb;
+  --syntax03: #dfe2e5;
+  --syntax04: #ffab00;
+  --syntax05: #e040fb;
+  --syntax06: #00e676;
+  --syntax07: #4ffbfb;
+  --syntax08: #609dfc;
+  --syntax09: #bd9ef8;
+  --syntax10: #ff4081;
+}
+// ----------------------------------------------------------------------------
+// Contains selectors for all themed elements.
+// Only colors and fonts should be added here.
+// See: _sass/yolo/themes for specific theme colors.
+// ----------------------------------------------------------------------------
+.yolo-themed {
   color: var(--secondary-color);
   background-color: var(--primary-color);
   font-family: var(--font-family-primary);
@@ -31,7 +65,7 @@
   }
 
   b, strong, em, abbr, cite, del, ins, sup, sub {
-    color: lighten(var(--secondary-color), 20%)
+    color: var(--secondary-color);
   }
 
   /* Code in text */
@@ -192,69 +226,69 @@
   .highlight {
     background: var(--code-background-color);
     color: var(--code-color);
-    .c { /* Comment */ @include dynamic-color(var(--code-background-color), "syntax01"); }
-    .err { /* Error */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .k {  /* Keyword */ @include dynamic-color(var(--code-background-color), "syntax10"); }
-    .l {  /* Literal */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .n {  /* Name */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .o {  /* Operator */ @include dynamic-color(var(--code-background-color), "syntax08"); }
-    .p {  /* Punctuation */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .cm {  /* Comment.Multiline */ @include dynamic-color(var(--code-background-color), "syntax01"); }
-    .cp {  /* Comment.Preproc */ @include dynamic-color(var(--code-background-color), "syntax01"); }
-    .c1 {  /* Comment.Single */ @include dynamic-color(var(--code-background-color), "syntax01"); }
-    .cs {  /* Comment.Special */ @include dynamic-color(var(--code-background-color), "syntax01"); }
-    .gd {  /* Generic.Deleted */ @include dynamic-color(var(--code-background-color), "syntax04"); }
+    .c { /* Comment */ color: var(--syntax01); }
+    .err { /* Error */ color: var(--syntax04); }
+    .k {  /* Keyword */ color: var(--syntax10); }
+    .l {  /* Literal */ color: var(--syntax05); }
+    .n {  /* Name */ color: var(--syntax02); }
+    .o {  /* Operator */ color: var(--syntax08); }
+    .p {  /* Punctuation */ color: var(--syntax02); }
+    .cm {  /* Comment.Multiline */ color: var(--syntax01); }
+    .cp {  /* Comment.Preproc */ color: var(--syntax01); }
+    .c1 {  /* Comment.Single */ color: var(--syntax01); }
+    .cs {  /* Comment.Special */ color: var(--syntax01); }
+    .gd {  /* Generic.Deleted */ color: var(--syntax04); }
     .ge {  /* Generic.Emph */ font-style: italic; }
-    .gh {  /* Generic.Heading */ @include dynamic-color(var(--code-background-color), "syntax02"); font-weight: bold; }
-    .gi {  /* Generic.Inserted */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .gp {  /* Generic.Prompt */ @include dynamic-color(var(--code-background-color), "syntax01"); font-weight: bold; }
+    .gh {  /* Generic.Heading */ color: var(--syntax02); font-weight: bold; }
+    .gi {  /* Generic.Inserted */ color: var(--syntax07); }
+    .gp {  /* Generic.Prompt */ color: var(--syntax01); font-weight: bold; }
     .gs {  /* Generic.Strong */ font-weight: bold; }
-    .gu {  /* Generic.Subheading */ @include dynamic-color(var(--code-background-color), "syntax08"); font-weight: bold; }
-    .kc {  /* Keyword.Constant */ @include dynamic-color(var(--code-background-color), "syntax10"); }
-    .kd {  /* Keyword.Declaration */ @include dynamic-color(var(--code-background-color), "syntax10"); }
-    .kn {  /* Keyword.Namespace */ @include dynamic-color(var(--code-background-color), "syntax08"); }
-    .kp {  /* Keyword.Pseudo */ @include dynamic-color(var(--code-background-color), "syntax10"); }
-    .kr {  /* Keyword.Reserved */ @include dynamic-color(var(--code-background-color), "syntax10"); }
-    .kt {  /* Keyword.Type */ @include dynamic-color(var(--code-background-color), "syntax06"); }
-    .ld {  /* Literal.Date */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .m {  /* Literal.Number */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .s {  /* Literal.String */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .na { /* Name.Attribute */ @include dynamic-color(var(--code-background-color), "syntax09"); }
-    .nb {  /* Name.Builtin */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .nc {  /* Name.Class */ @include dynamic-color(var(--code-background-color), "syntax06"); }
-    .no {  /* Name.Constant */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .nd {  /* Name.Decorator */ @include dynamic-color(var(--code-background-color), "syntax08"); }
-    .ni {  /* Name.Entity */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .ne {  /* Name.Exception */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .nf {  /* Name.Function */ @include dynamic-color(var(--code-background-color), "syntax09"); }
-    .nl {  /* Name.Label */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .nn {  /* Name.Namespace */ @include dynamic-color(var(--code-background-color), "syntax06"); }
-    .nx {  /* Name.Other */ @include dynamic-color(var(--code-background-color), "syntax09"); }
-    .py {  /* Name.Property */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .nt {  /* Name.Tag */ @include dynamic-color(var(--code-background-color), "syntax08"); }
-    .nv {  /* Name.Variable */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .ow {  /* Operator.Word */ @include dynamic-color(var(--code-background-color), "syntax08"); }
-    .w {   /* Text.Whitespace */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .mf {  /* Literal.Number.Float */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .mh {  /* Literal.Number.Hex */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .mi {  /* Literal.Number.Integer */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .mo {  /* Literal.Number.Oct */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .sb {  /* Literal.String.Backtick */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .sc {  /* Literal.String.Char */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .sd {  /* Literal.String.Doc */ @include dynamic-color(var(--code-background-color), "syntax01"); }
-    .s2 {  /* Literal.String.Double */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .se {  /* Literal.String.Escape */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .sh {  /* Literal.String.Heredoc */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .si {  /* Literal.String.Interpol */ @include dynamic-color(var(--code-background-color), "syntax05"); }
-    .sx {  /* Literal.String.Other */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .sr {  /* Literal.String.Regex */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .s1 {  /* Literal.String.Single */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .ss {  /* Literal.String.Symbol */ @include dynamic-color(var(--code-background-color), "syntax07"); }
-    .bp {  /* Name.Builtin.Pseudo */ @include dynamic-color(var(--code-background-color), "syntax02"); }
-    .vc {  /* Name.Variable.Class */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .vg {  /* Name.Variable.Global */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .vi {  /* Name.Variable.Instance */ @include dynamic-color(var(--code-background-color), "syntax04"); }
-    .il {  /* Literal.Number.Integer.Long */ @include dynamic-color(var(--code-background-color), "syntax05"); }
+    .gu {  /* Generic.Subheading */ color: var(--syntax08); font-weight: bold; }
+    .kc {  /* Keyword.Constant */ color: var(--syntax10); }
+    .kd {  /* Keyword.Declaration */ color: var(--syntax10); }
+    .kn {  /* Keyword.Namespace */ color: var(--syntax08); }
+    .kp {  /* Keyword.Pseudo */ color: var(--syntax10); }
+    .kr {  /* Keyword.Reserved */ color: var(--syntax10); }
+    .kt {  /* Keyword.Type */ color: var(--syntax06); }
+    .ld {  /* Literal.Date */ color: var(--syntax07); }
+    .m {  /* Literal.Number */ color: var(--syntax05); }
+    .s {  /* Literal.String */ color: var(--syntax07); }
+    .na { /* Name.Attribute */ color: var(--syntax09); }
+    .nb {  /* Name.Builtin */ color: var(--syntax02); }
+    .nc {  /* Name.Class */ color: var(--syntax06); }
+    .no {  /* Name.Constant */ color: var(--syntax04); }
+    .nd {  /* Name.Decorator */ color: var(--syntax08); }
+    .ni {  /* Name.Entity */ color: var(--syntax02); }
+    .ne {  /* Name.Exception */ color: var(--syntax04); }
+    .nf {  /* Name.Function */ color: var(--syntax09); }
+    .nl {  /* Name.Label */ color: var(--syntax02); }
+    .nn {  /* Name.Namespace */ color: var(--syntax06); }
+    .nx {  /* Name.Other */ color: var(--syntax09); }
+    .py {  /* Name.Property */ color: var(--syntax02); }
+    .nt {  /* Name.Tag */ color: var(--syntax08); }
+    .nv {  /* Name.Variable */ color: var(--syntax04); }
+    .ow {  /* Operator.Word */ color: var(--syntax08); }
+    .w {   /* Text.Whitespace */ color: var(--syntax02); }
+    .mf {  /* Literal.Number.Float */ color: var(--syntax05); }
+    .mh {  /* Literal.Number.Hex */ color: var(--syntax05); }
+    .mi {  /* Literal.Number.Integer */ color: var(--syntax05); }
+    .mo {  /* Literal.Number.Oct */ color: var(--syntax05); }
+    .sb {  /* Literal.String.Backtick */ color: var(--syntax07); }
+    .sc {  /* Literal.String.Char */ color: var(--syntax02); }
+    .sd {  /* Literal.String.Doc */ color: var(--syntax01); }
+    .s2 {  /* Literal.String.Double */ color: var(--syntax07); }
+    .se {  /* Literal.String.Escape */ color: var(--syntax05); }
+    .sh {  /* Literal.String.Heredoc */ color: var(--syntax07); }
+    .si {  /* Literal.String.Interpol */ color: var(--syntax05); }
+    .sx {  /* Literal.String.Other */ color: var(--syntax07); }
+    .sr {  /* Literal.String.Regex */ color: var(--syntax07); }
+    .s1 {  /* Literal.String.Single */ color: var(--syntax07); }
+    .ss {  /* Literal.String.Symbol */ color: var(--syntax07); }
+    .bp {  /* Name.Builtin.Pseudo */ color: var(--syntax02); }
+    .vc {  /* Name.Variable.Class */ color: var(--syntax04); }
+    .vg {  /* Name.Variable.Global */ color: var(--syntax04); }
+    .vi {  /* Name.Variable.Instance */ color: var(--syntax04); }
+    .il {  /* Literal.Number.Integer.Long */ color: var(--syntax05); }
   }
 
 }
