--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -14,6 +14,7 @@
     float: left;
   }
   .theme-dot {
+    font-family: monospace;
     font-size: $size-3;
     transform: rotate(90deg);
     float: right;
