--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -1,23 +1,29 @@
 // ----------------------------------------------------------------------------
 // arcade theme
 // ----------------------------------------------------------------------------
-$light-primary-color: #fbfcfc;
-$light-secondary-color: #FF1989;
-$light-accent-color: #4113a6;
-$light-code-background-color: #fff;
-$light-code-color: #01a6c8;
-$light-link-color: #02c162;
-$light-sidebar-color: #e1f5fe;
-
-$dark-primary-color: #000928;
-$dark-secondary-color: #00e676;
-$dark-accent-color: #697df8;
-$dark-code-background-color: #00080f;
-$dark-code-color: #65e9fc;
-$dark-link-color: #ff31b9;
-$dark-sidebar-color: #000;
-
-// fonts
-$family-primary: "Inconsolata", sans-serif;
-$family-secondary: "Montserrat", sans-serif;
-$family-monospace: "Roboto Mono", monospace;
+// Light mode
+:root {
+  --primary-color: #fbfcfc;
+  --secondary-color: #FF1989;
+  --accent-color: #4113a6;
+  --link-color: #02c162;
+  --code-background-color: #fff;
+  --code-color: #01a6c8;
+  --sidebar-color: #e1f5fe;
+  --font-family-primary: "Inconsolata", monospace;
+  --font-family-secondary: "Montserrat", sans-serif;
+  --font-family-monospace: "Roboto Mono", monospace;
+}
+// Dark mode
+:root[dark] {
+  --primary-color: #000928;
+  --secondary-color: #00e676;
+  --accent-color: #697df8;
+  --link-color: #ff31b9;
+  --code-background-color: #00080f;
+  --code-color: #65e9fc;
+  --sidebar-color: #000;
+  --font-family-primary: "Inconsolata", monospace;
+  --font-family-secondary: "Montserrat", sans-serif;
+  --font-family-monospace: "Roboto Mono", monospace;
+}
