--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -1,29 +1,20 @@
 // ----------------------------------------------------------------------------
 // corbs theme
 // ----------------------------------------------------------------------------
-// light mode colors
-$light-primary-color: #edf5fb;
-$light-secondary-color: #1a237e;
-$light-accent-color: #d10277;
-$light-link-color: #0091ea;
-$light-code-background-color: #f8faff;
-$light-code-color: #6843c8;
-$light-sidebar-color: #e1f5fe;
-
-// dark mode colors
-$dark-primary-color: #000928;
-$dark-secondary-color: #fb1d9e;
-$dark-accent-color: #00b0ff;
-$dark-link-color: #65e9fc;
-$dark-code-background-color: #000110;
-$dark-code-color: #b388ff;
-$dark-sidebar-color: #000110;
-
-// fonts
-$family-primary: "JetBrains Mono", monospace;
-$family-secondary: "Red Hat Text", sans-serif;
-$family-monospace: "Inconsolata", monospace;
-
+// Light mode
+:root {
+  --primary-color: #edf5fb;
+  --secondary-color: #1a237e;
+  --accent-color: #d10277;
+  --link-color: #0091ea;
+  --code-background-color: #f8faff;
+  --code-color: #6843c8;
+  --sidebar-color: #e1f5fe;
+  --font-family-primary: "JetBrains Mono", monospace;
+  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-monospace: "Inconsolata", monospace;
+}
+// Dark mode
 :root[dark] {
   --primary-color: #000928;
   --secondary-color: #fb1d9e;
@@ -32,19 +23,6 @@ $family-monospace: "Inconsolata", monospace;
   --code-background-color: #000110;
   --code-color: #b388ff;
   --sidebar-color: #000110;
-  --font-family-primary: "JetBrains Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Inconsolata", monospace;
-}
-
-:root[light] {
-  --primary-color: #edf5fb;
-  --secondary-color: #1a237e;
-  --accent-color: #d10277;
-  --link-color: #0091ea;
-  --code-background-color: #f8faff;
-  --code-color: #6843c8;
-  --sidebar-color: #e1f5fe;
   --font-family-primary: "JetBrains Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "Inconsolata", monospace;
