--- a/_sass/yolo/themes/_weekly.scss
+++ b/_sass/yolo/themes/_weekly.scss
@@ -1,25 +1,29 @@
 // ----------------------------------------------------------------------------
 // weekly theme
 // ----------------------------------------------------------------------------
-// light mode colors
-$light-primary-color: #eceff1;
-$light-secondary-color: #37474f;
-$light-accent-color: #1a237e;
-$light-link-color: #0091ea;
-$light-code-background-color: #fafafa;
-$light-code-color: #000928;
-$light-sidebar-color: #e1f5fe;
-
-// dark mode colors
-$dark-primary-color: #020c2a;
-$dark-secondary-color: #eceff1;
-$dark-accent-color: #17a3f7;
-$dark-link-color: #65e9fc;
-$dark-code-background-color: #000a12;
-$dark-code-color: #c4feee;
-$dark-sidebar-color: #010413;
-
-// fonts
-$family-primary: "Red Hat Text", serif;
-$family-secondary: "Open Sans", sans-serif;
-$family-monospace: "Red Hat Mono", monospace;
+// Light mode
+:root {
+  --primary-color: #eceff1;
+  --secondary-color: #37474f;
+  --accent-color: #1a237e;
+  --link-color: #0091ea;
+  --code-background-color: #fafafa;
+  --code-color: #000928;
+  --sidebar-color: #e1f5fe;
+  --font-family-primary: "Red Hat Text", sans-serif;
+  --font-family-secondary: "Open Sans", sans-serif;
+  --font-family-monospace: "Red Hat Mono", monospace;
+}
+// Dark mode
+:root[dark] {
+  --primary-color: #020c2a;
+  --secondary-color: #eceff1;
+  --accent-color: #17a3f7;
+  --link-color: #65e9fc;
+  --code-background-color: #000a12;
+  --code-color: #c4feee;
+  --sidebar-color: #010413;
+  --font-family-primary: "Red Hat Text", sans-serif;
+  --font-family-secondary: "Open Sans", sans-serif;
+  --font-family-monospace: "Red Hat Mono", monospace;
+}
