--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 @charset "utf-8";
 
 @import "yolo/variables";
-@import "yolo/themes/{{ site.data.settings.style | default: 'corbs' }}";
+@import "yolo/themes/{{ site.data.settings.theme.name | default: 'corbs' }}";
 @import "yolo/normalize";
 @import "yolo/base";
 @import "yolo/responsiveness";
@@ -15,8 +15,7 @@
 @import "yolo/lightbox";
 @import "yolo/navigation";
 @import "yolo/yolo";
-@import "yolo/dark";
-@import "yolo/light";
+@import "yolo/theme";
 
 {% if site.data.settings.sidebar %}
 @import "yolo/sidebar";
