--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,10 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family={% for font in site.data.fonts %}{{ font.name | replace: ' ', '+' }}{% if font.weights %}:{% endif %}{{ font.weights | remove: ' ' }}{% if forloop.last != true %}|{% endif %}{% endfor %}">
-    <!-- Ionicons Icons -->
-    <link rel="preload" href="https://unpkg.com/ionicons@4.6.3/dist/css/ionicons.min.css" as="style">
-    <link href="https://unpkg.com/ionicons@4.6.3/dist/css/ionicons.min.css" rel="stylesheet">
     {% endif %}
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="assets/js/theme.js"></script>
     <!-- Main site stylesheet, generated via sass -->
     <link rel="stylesheet" href="css/main.css">
