theme scss refactor

--- a/_sass/yolo/_layout.scss
+++ b/_sass/yolo/_layout.scss
@@ -50,9 +50,9 @@ $column-gap: 0.50rem !default;
   background-color: inherit;
   color: inherit;
   border-radius: 0.20rem;
-  padding: .25rem 0;
+  padding: .25rem .5rem;
   position: relative;
-  text-align: center;
+  text-align: left;
 }
 
 .column {
