--- a/_sass/yolo/themes/_yolo.scss
+++ b/_sass/yolo/themes/_yolo.scss
@@ -1,46 +1,53 @@
 // ----------------------------------------------------------------------------
 // yolo theme - WIP new color scheme implementation
 // ----------------------------------------------------------------------------
+// Light mode
+:root {
+  --primary-color: #ecf6ff;
+  --on-primary-color: #011141;
+  --primary-container-color: #f8faff;
+  --on-primary-container-color: #3f2390;
+
+  --secondary-color: #070f62;
+  --on-secondary-color: #edf5fb;
+  --secondary-container-color: #04093e;
+  --on-secondary-container-color: #edf5fb;
+
+  --tertiary-color: #774bd5;
+  --on-tertiary-color: #f8faff;
+  --tertiary-container-color: #bfa3f3;
+  --on-tertiary-container-color: #140233;
+
+  --accent-color: #d10277;
+  --on-accent-color: #f8d1e7;
+
+  --link-color: #0091ea;
+
+  --font-family-primary: "JetBrains Mono", monospace;
+  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-monospace: "Inconsolata", monospace;
+}
 // Dark mode
 :root[dark] {
-  // primary-color: by default set as the background color
   --primary-color: #000928;
-  // on-primary-color: color used on top of primary-color
-  --on-primary-color: #fb1d9e;
-  // primary-container-color: primary color used for containers
-  --primary-container-color: #000110;
-  // on-primary-container-color: color used on top of primary-container-color
-  --on-primary-container-color: #dbe1ff;
+  --on-primary-color: #b89cf6;
+  --primary-container-color: #04000c;
+  --on-primary-container-color: #d5d7f8;
 
   --secondary-color: #fb1d9e;
-  --on-secondary-color: #000928;
-  --secondary-container-color: #8c0056;
-  --on-secondary-container-color: #ffdae5;
+  --on-secondary-color: #19010f;
+  --secondary-container-color: #b5036a;
+  --on-secondary-container-color: #f6a5d4;
 
-  --tertiary-color: #b388ff;
-  --on-tertiary-color: #140233;
-  --tertiary-container-color: #3b1779;
-  --on-tertiary-container-color: #bfa3f3;
+  --tertiary-color: #00b0ff;
+  --on-tertiary-color: #000928;
+  --tertiary-container-color: #025a82;
+  --on-tertiary-container-color: #d0f2f6;
 
-  --accent-color: #00b0ff;
+  --accent-color: #fb1d9e;
   --on-accent-color: #000928;
-  --accent-container-color: #037eb8;
-  --on-accent-container-color: #001521;
 
-  --background-color: #000928;
   --link-color: #65e9fc;
-
-  --neutral-color: #e0e0e0;
-  --on-neutral-color: #212121;
-
-  --error-color: #ffcdd2;
-  --on-error-color: #b71c1c;
-
-  --warn-color: #ffee58;
-  --on-warn-color: #212121;
-
-  --info-color: #bbdefb;
-  --on-info-color: #1565c0;
 
   --font-family-primary: "JetBrains Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
