--- a/_sass/yolo/themes/_skeletor.scss
+++ b/_sass/yolo/themes/_skeletor.scss
@@ -4,12 +4,25 @@
 // Light mode
 :root {
   --primary-color: #dbddf8;
-  --secondary-color: #1a0037;
-  --accent-color: #502eb9;
-  --link-color: #1f56d8;
-  --code-background-color: #f4f5fb;
-  --code-color: #6843c8;
-  --sidebar-color: #f3f4fa;
+  --on-primary-color: #1a0037;
+  --primary-container-color: #f4f5fb;
+  --on-primary-container-color: #6843c8;
+
+  --secondary-color: #502eb9;
+  --on-secondary-color: #fff;
+  --secondary-container-color: #424242;
+  --on-secondary-container-color: #f5f5f5;
+
+  --tertiary-color: #1f56d8;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #f5f5f5;
+
+  --accent-color: #4a23b3;
+  --on-accent-color: #fff;
+
+  --link-color: #1291f4;
+
   --font-family-primary: "Inconsolata", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "JetBrains Mono", monospace;
@@ -17,12 +30,25 @@
 // Dark mode
 :root[dark] {
   --primary-color: #1a0037;
-  --secondary-color: #bdb7cf;
-  --accent-color: #8f67fe;
+  --on-primary-color: #bdb7cf;
+  --primary-container-color: #100020;
+  --on-primary-container-color: #b4a9e9;
+
+  --secondary-color: #8f67fe;
+  --on-secondary-color: #000;
+  --secondary-container-color: #fafafa;
+  --on-secondary-container-color: #424242;
+
+  --tertiary-color: #437cf4;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #fafafa;
+
+  --accent-color: #8457ff;
+  --on-accent-color: #fff;
+
   --link-color: #65e9fc;
-  --code-background-color: #100020;
-  --code-color: #b4a9e9;
-  --sidebar-color: #1e0c4a;
+
   --font-family-primary: "Inconsolata", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "JetBrains Mono", monospace;
