--- a/_sass/yolo/themes/_weekly.scss
+++ b/_sass/yolo/themes/_weekly.scss
@@ -4,12 +4,25 @@
 // Light mode
 :root {
   --primary-color: #eceff1;
-  --secondary-color: #37474f;
-  --accent-color: #1a237e;
+  --on-primary-color: #37474f;
+  --primary-container-color: #fafafa;
+  --on-primary-container-color: #000928;
+
+  --secondary-color: #1a237e;
+  --on-secondary-color: #fff;
+  --secondary-container-color: #424242;
+  --on-secondary-container-color: #f5f5f5;
+
+  --tertiary-color: #1f56d8;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #f5f5f5;
+
+  --accent-color: #4a23b3;
+  --on-accent-color: #fff;
+
   --link-color: #0091ea;
-  --code-background-color: #fafafa;
-  --code-color: #000928;
-  --sidebar-color: #e1f5fe;
+
   --font-family-primary: "Red Hat Text", sans-serif;
   --font-family-secondary: "Open Sans", sans-serif;
   --font-family-monospace: "Red Hat Mono", monospace;
@@ -17,12 +30,25 @@
 // Dark mode
 :root[dark] {
   --primary-color: #020c2a;
-  --secondary-color: #eceff1;
-  --accent-color: #17a3f7;
+  --on-primary-color: #eceff1;
+  --primary-container-color: #000a12;
+  --on-primary-container-color: #c4feee;
+
+  --secondary-color: #8457ff;
+  --on-secondary-color: #000;
+  --secondary-container-color: #100a20;
+  --on-secondary-container-color: #dcedf8;
+
+  --tertiary-color: #17a3f7;
+  --on-tertiary-color: #000;
+  --tertiary-container-color: #082c41;
+  --on-tertiary-container-color: #dcedf8;
+
+  --accent-color: #8457ff;
+  --on-accent-color: #fff;
+
   --link-color: #65e9fc;
-  --code-background-color: #000a12;
-  --code-color: #c4feee;
-  --sidebar-color: #010413;
+
   --font-family-primary: "Red Hat Text", sans-serif;
   --font-family-secondary: "Open Sans", sans-serif;
   --font-family-monospace: "Red Hat Mono", monospace;
