--- a/_sass/yolo/themes/_yolo.scss
+++ b/_sass/yolo/themes/_yolo.scss
@@ -1,55 +1,55 @@
 // ----------------------------------------------------------------------------
-// yolo theme - WIP new color scheme implementation
+// yolo theme
 // ----------------------------------------------------------------------------
 // Light mode
 :root {
-  --primary-color: #ecf6ff;
-  --on-primary-color: #011141;
-  --primary-container-color: #f8faff;
-  --on-primary-container-color: #3f2390;
+  --primary-color: #fff;
+  --on-primary-color: #000;
+  --primary-container-color: #f5f5f5;
+  --on-primary-container-color: #424242;
 
-  --secondary-color: #070f62;
-  --on-secondary-color: #edf5fb;
-  --secondary-container-color: #04093e;
-  --on-secondary-container-color: #edf5fb;
+  --secondary-color: #000;
+  --on-secondary-color: #fff;
+  --secondary-container-color: #424242;
+  --on-secondary-container-color: #f5f5f5;
 
-  --tertiary-color: #774bd5;
-  --on-tertiary-color: #f8faff;
-  --tertiary-container-color: #bfa3f3;
-  --on-tertiary-container-color: #140233;
+  --tertiary-color: #1f56d8;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #f5f5f5;
 
-  --accent-color: #d10277;
-  --on-accent-color: #f8d1e7;
+  --accent-color: #4a23b3;
+  --on-accent-color: #fff;
 
-  --link-color: #0091ea;
+  --link-color: #339ff4;
 
-  --font-family-primary: "JetBrains Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-primary: "Inconsolata", monospace;
+  --font-family-secondary: "Montserrat", sans-serif;
   --font-family-monospace: "Inconsolata", monospace;
 }
 // Dark mode
 :root[dark] {
-  --primary-color: #000928;
-  --on-primary-color: #b89cf6;
-  --primary-container-color: #04000c;
-  --on-primary-container-color: #d5d7f8;
+  --primary-color: #000;
+  --on-primary-color: #fafafa;
+  --primary-container-color: #000;
+  --on-primary-container-color: #bfa3f3;
 
-  --secondary-color: #fb1d9e;
-  --on-secondary-color: #19010f;
-  --secondary-container-color: #b5036a;
-  --on-secondary-container-color: #f6a5d4;
+  --secondary-color: #fff;
+  --on-secondary-color: #000;
+  --secondary-container-color: #fafafa;
+  --on-secondary-container-color: #424242;
 
-  --tertiary-color: #00b0ff;
-  --on-tertiary-color: #000928;
-  --tertiary-container-color: #025a82;
-  --on-tertiary-container-color: #d0f2f6;
+  --tertiary-color: #147cf3;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #fafafa;
 
-  --accent-color: #fb1d9e;
-  --on-accent-color: #000928;
+  --accent-color: #8457ff;
+  --on-accent-color: #fff;
 
-  --link-color: #65e9fc;
+  --link-color: #65c7fc;
 
-  --font-family-primary: "JetBrains Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-primary: "Inconsolata", monospace;
+  --font-family-secondary: "Montserrat", sans-serif;
   --font-family-monospace: "Inconsolata", monospace;
 }
