--- a/src/samples/yolo-skeletor/_sass/yolo/themes/_skeletor.scss
+++ b/src/samples/yolo-skeletor/_sass/yolo/themes/_skeletor.scss
@@ -1,25 +1,55 @@
 // ----------------------------------------------------------------------------
 // skeletor theme
 // ----------------------------------------------------------------------------
-// light mode colors
-$light-primary-color: #dbddf8;
-$light-secondary-color: #1a0037;
-$light-accent-color: #502eb9;
-$light-link-color: #1f56d8;
-$light-code-background-color: #f4f5fb;
-$light-code-color: #6843c8;
-$light-sidebar-color: #f3f4fa;
+// Light mode
+:root {
+  --primary-color: #dbddf8;
+  --on-primary-color: #1a0037;
+  --primary-container-color: #f4f5fb;
+  --on-primary-container-color: #6843c8;
 
-// dark mode colors
-$dark-primary-color: #1a0037;
-$dark-secondary-color: #bdb7cf;
-$dark-accent-color: #8f67fe;
-$dark-link-color: #65e9fc;
-$dark-code-background-color: #100020;
-$dark-code-color: #b4a9e9;
-$dark-sidebar-color: #1e0c4a;
+  --secondary-color: #502eb9;
+  --on-secondary-color: #fff;
+  --secondary-container-color: #424242;
+  --on-secondary-container-color: #f5f5f5;
 
-// fonts
-$family-primary: "Inconsolata", monospace;
-$family-secondary: "Red Hat Text", sans-serif;
-$family-monospace: "JetBrains Mono", monospace;
+  --tertiary-color: #1f56d8;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #f5f5f5;
+
+  --accent-color: #4a23b3;
+  --on-accent-color: #fff;
+
+  --link-color: #1291f4;
+
+  --font-family-primary: "Inconsolata", monospace;
+  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-monospace: "JetBrains Mono", monospace;
+}
+// Dark mode
+:root[dark] {
+  --primary-color: #1a0037;
+  --on-primary-color: #bdb7cf;
+  --primary-container-color: #100020;
+  --on-primary-container-color: #b4a9e9;
+
+  --secondary-color: #8f67fe;
+  --on-secondary-color: #000;
+  --secondary-container-color: #fafafa;
+  --on-secondary-container-color: #424242;
+
+  --tertiary-color: #437cf4;
+  --on-tertiary-color: #fafafa;
+  --tertiary-container-color: #0b1e4a;
+  --on-tertiary-container-color: #fafafa;
+
+  --accent-color: #8457ff;
+  --on-accent-color: #fff;
+
+  --link-color: #65e9fc;
+
+  --font-family-primary: "Inconsolata", monospace;
+  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-monospace: "JetBrains Mono", monospace;
+}
