cp not mv in open-site.sh

--- a/_sass/yolo/themes/_solo.scss
+++ b/_sass/yolo/themes/_solo.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// yolo theme
+// solo theme
 // ----------------------------------------------------------------------------
 // Light mode
 :root {
