--- a/_sass/yolo/_navigation.scss
+++ b/_sass/yolo/_navigation.scss
@@ -4,12 +4,12 @@
     line-height: 1;
     list-style-type: none;
     margin-bottom: 0;
-    padding: 0.75rem 1rem 0;
+    padding: 0.75rem 0.5rem 0;
     li {
       margin-bottom: 0.75rem;
     }
     li:before {
-      content: "- ";
+      content: "+ ";
     }
   }
 }
