--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -3,23 +3,20 @@
 // ----------------------------------------------------------------------------
 // Light mode
 :root {
-  --primary-color: #ecf6ff;
+  --primary-color: #d2d2f3;
   --on-primary-color: #011141;
-  --primary-container-color: #f8faff;
-  --on-primary-container-color: #3f2390;
+  --primary-container-color: #070831;
+  --on-primary-container-color: #949bfa;
 
-  --secondary-color: #070f62;
-  --on-secondary-color: #edf5fb;
-  --secondary-container-color: #04093e;
-  --on-secondary-container-color: #edf5fb;
+  --secondary-color: #5815c0;
+  --on-secondary-color: #d2d2f3;
+  --secondary-container-color: #100423;
+  --on-secondary-container-color: #d7c6f3;
 
-  --tertiary-color: #774bd5;
+  --tertiary-color: #d80f8a;
   --on-tertiary-color: #f8faff;
-  --tertiary-container-color: #bfa3f3;
-  --on-tertiary-container-color: #140233;
-
-  --accent-color: #d10277;
-  --on-accent-color: #f8d1e7;
+  --tertiary-container-color: #b5036a;
+  --on-tertiary-container-color: #f6a5d4;
 
   --link-color: #0091ea;
 
@@ -29,25 +26,22 @@
 }
 // Dark mode
 :root[dark] {
-  --primary-color: #000928;
-  --on-primary-color: #b89cf6;
-  --primary-container-color: #04000c;
-  --on-primary-container-color: #d5d7f8;
+  --primary-color: #070831;
+  --on-primary-color: #b1b6fa;
+  --primary-container-color: #040511;
+  --on-primary-container-color: #7c85fa;
 
   --secondary-color: #fb1d9e;
   --on-secondary-color: #19010f;
   --secondary-container-color: #b5036a;
   --on-secondary-container-color: #f6a5d4;
 
-  --tertiary-color: #00b0ff;
-  --on-tertiary-color: #000928;
-  --tertiary-container-color: #025a82;
-  --on-tertiary-container-color: #d0f2f6;
+  --tertiary-color: #0ca9f4;
+  --on-tertiary-color: #010d13;
+  --tertiary-container-color: #085f89;
+  --on-tertiary-container-color: #ecf8fe;
 
-  --accent-color: #fb1d9e;
-  --on-accent-color: #000928;
-
-  --link-color: #65e9fc;
+  --link-color: #65cffc;
 
   --font-family-primary: "JetBrains Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
